--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>NETFLIX CLONE</title>
 </head>
 <body>
-
+    <header>
+        <div class="container">
+            <h2>NETFLIX</h2>
+            <NAv>
+                <a href="#">Início</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </NAv>
+        </div>
+    </header>
 </body>
 </html>
