--- a/index.html
+++ b/index.html
@@ -19,5 +19,24 @@
             </NAv>
         </div>
     </header>
+        
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">HOUSE OF CARDS</h3>
+                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de consquistar Washington.</p>
+
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+           
+        </div>
+    </main>
 </body>
 </html>
