--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
                 <div class="botoes">
                     <button role="button" class="botao">
+                        <i class="fa-solid fa-play"></i>
                         ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fa-solid fa-circle-info"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
@@ -38,5 +40,8 @@
            
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/3066edb52a.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
